// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ErrorBoundary /> should display error message 1`] = `
<div
  id="content-container"
>
  <h1>
    An Error Occurred
  </h1>
  <code
    class="error-boundary-description p-3 my-3"
  >
    Error: This component is broken!
  </code>
  <p>
    More detailed information is available in the console of your web browser - on most browsers accessible after pressing Ctrl+Shift+J or F12.
  </p>
  <p>
    Please report this error to our support team via e-mail: 
    <a
      href="mailto:tech.support@turris.cz"
    >
      tech.support@turris.cz
    </a>
    .
  </p>
</div>
`;

exports[`<ErrorBoundary /> should handle unexpected API error 1`] = `
<div
  id="content-container"
>
  <h1>
    An Error Occurred
  </h1>
  <code
    class="error-boundary-description p-3 my-3"
  >
    Error: This API request is broken!
  </code>
  <p>
    More detailed information is available in the console of your web browser - on most browsers accessible after pressing Ctrl+Shift+J or F12.
  </p>
  <p>
    Please report this error to our support team via e-mail: 
    <a
      href="mailto:tech.support@turris.cz"
    >
      tech.support@turris.cz
    </a>
    .
  </p>
</div>
`;

exports[`<ErrorBoundary /> should render children components when there's no error 1`] = `
<div>
  <p>
    This is the content of the component.
  </p>
</div>
`;
